--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/Server.js",
   "types": "dist/Server.d.ts",
   "scripts": {
-    "install": "tsc",
+    "compile": "tsc",
+    "compile-watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
