--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "express-slider",
   "version": "0.1.3",
   "description": "Node.JS/TypeScript Express Slider Middleware",
-  "main": "dist/Server.js",
-  "types": "dist/Server.d.ts",
+  "main": "distibution/Server.js",
+  "types": "distibution/Server.d.ts",
   "scripts": {
     "compile": "tsc",
     "compile-watch": "tsc --watch",
@@ -31,13 +31,13 @@
     "@types/mmmagic": "^0.4.29",
     "@types/type-is": "^1.6.0",
     "@types/underscore": "^1.8.3",
-    "tsc": "^1.20150623.0"
+    "typescript": "^2.5.2"
   },
   "engines": {
     "node": ">=7.5.0"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/kol-93/express-slider.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kol-93/express-slider.git"
   }
 }
