--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "express-slider",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Node.JS/TypeScript Express Slider Middleware",
-  "main": "distibution/Server.js",
-  "types": "distibution/Server.d.ts",
+  "main": "distibution/index.js",
+  "types": "distibution/index.d.ts",
   "scripts": {
+    "prepublish": "npm run build",
+    "build": "tsc",
     "compile": "tsc",
     "compile-watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
