--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "express-slider",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Node.JS/TypeScript Express Slider Middleware",
-  "main": "distibution/index.js",
-  "types": "distibution/index.d.ts",
+  "main": "distribution/index.js",
+  "types": "distribution/index.d.ts",
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc",
