--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-slider",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "Node.JS/TypeScript Express Slider Middleware",
   "main": "distribution/index.js",
   "types": "distribution/index.d.ts",
@@ -21,6 +21,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "express": "^4.15.4",
+    "gif-frames": "^0.4.1",
     "gm": "^1.23.0",
     "mmmagic": "^0.4.5",
     "type-is": "^1.6.15",
