--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-slider",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Node.JS/TypeScript Express Slider Middleware",
   "main": "distribution/index.js",
   "types": "distribution/index.d.ts",
@@ -24,6 +24,7 @@
     "gif-frames": "^0.4.1",
     "gm": "^1.23.0",
     "mmmagic": "^0.4.5",
+    "socket.io": "^2.1.1",
     "type-is": "^1.6.15",
     "underscore": "^1.8.3"
   },
@@ -31,6 +32,8 @@
     "@types/express": "^4.0.37",
     "@types/gm": "^1.17.32",
     "@types/mmmagic": "^0.4.29",
+    "@types/socket.io": "^1.4.38",
+    "@types/socket.io-client": "^1.4.32",
     "@types/type-is": "^1.6.0",
     "@types/underscore": "^1.8.3",
     "typescript": "^3.0.0"
